src/style/properties.less
@properties-width:28rem;
@properties-padding:2rem;
@toolbar-width:3rem;


/* -- MASTER CONTAINER -- */

.main {
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
    position: absolute;
    display: flex;
    cursor: default;
    overflow: hidden;
    opacity: 0;
}

.main.main__ready {
    opacity: 1;
    transition: all 500ms ease;
}

/* -- PROPERTIES -- */

.properties {
    height: 100%;
    width: @properties-width;
    overflow: hidden;
    position: absolute;
    right: 0;
    min-height: 100%;
    .background-transparency(@warm-gray, .9);
    flex-direction: column;
    justify-content: flex-start;
    display: flex;
    flex-wrap: nowrap;
    align-items: stretch;
    flex-shrink: 0;
    opacity: .97;
}


.formline {
    width: @properties-width - (@properties-padding * 2);
    display: flex;
    align-items: center;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
}

.transform,
.style,
.pages {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    background-color: rgba(45, 45, 43, 0.94);
}

.transform.section,
.style .section-header,
.pages .section-header {
    padding: 0 @properties-padding;
}

.pages .section-container {
    padding: 0;
    flex-shrink: 1;
}

.section-container {
    overflow-x: hidden;
    overflow-y: auto;
    flex-grow: 1;
    padding: 0.5rem 0;
    display: flex;
    align-items: initial;
}

.style .section-container {
    padding: 0 @properties-padding;
}

.transform {
    flex-grow: 0;
    flex-shrink: 0;
}

.transform .section-container {
    padding-top: 1rem;
    padding-bottom: 1rem;
    display: flex;
    flex-direction: column;
}

.pages {
    flex-grow: 1000;
    flex-basis: 5rem;
    bottom: 0;
}

.generate-columns(@properties-width);

.generate-columns(@n, @i: 1) when (@i =< @n) {
    .column-@{i} {
        width: ~"@{i}rem";
        flex-shrink: 0;
    }
    .generate-columns(@n, (@i + 1));
}

.column-half {
    width: 0.5rem;
}

